Implemented '/ospf_nbrs' endpoint
