# docs/swagger.yaml
@@ -5101,6 +5101,265 @@ paths:
       summary: Count device_domains
       tags:
       - devices
+  /devices/ospf_nbrs:
+    get:
+      description: List ospf_nbrs info
+      operationId: list-ospf_nbrs
+      parameters:
+      - description: url encoded SQL 'LIKE' operator pattern
+        in: query
+        name: dev_id_f
+        type: string
+      - description: url encoded SQL 'ILIKE' operator pattern
+        in: query
+        name: condition_f
+        type: string
+      - description: ip or containing net in CIDR notation
+        in: query
+        name: nbr_ip_f
+        type: string
+      - description: 'min: 1; max: 1000; default: 100'
+        in: query
+        name: limit
+        type: integer
+      - description: 'default: 0'
+        in: query
+        name: offset
+        type: integer
+      - description: record update time >= (unix timestamp in milliseconds)
+        in: query
+        name: updated_ge
+        type: integer
+      - description: record update time <= (unix timestamp in milliseconds)
+        in: query
+        name: updated_le
+        type: integer
+      - description: record creation time >= (unix timestamp in milliseconds)
+        in: query
+        name: created_ge
+        type: integer
+      - description: record creation time <= (unix timestamp in milliseconds)
+        in: query
+        name: created_le
+        type: integer
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/handlers.ospfNbr'
+            type: array
+        "404":
+          description: Invalid route error
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+        "405":
+          description: Invalid method error
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+        "500":
+          description: Failde DB transaction
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+      summary: List ospf_nbrs
+      tags:
+      - devices
+    post:
+      description: Create ospf_nbr
+      operationId: create-ospf_nbr
+      parameters:
+      - description: JSON object of ospfNbr.<br />Ignored fields:<ul><li>nbr_id</li><li>updated_on</li><li>created_on</li></ul>
+        in: body
+        name: Body
+        required: true
+        schema:
+          $ref: '#/definitions/handlers.ospfNbr'
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/handlers.ospfNbr'
+        "400":
+          description: Invalid request payload
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+        "404":
+          description: Invalid route error
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+        "405":
+          description: Invalid method error
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+        "500":
+          description: Failde DB transaction
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+      summary: Create ospf_nbr
+      tags:
+      - devices
+  /devices/ospf_nbrs/{nbr_id}:
+    delete:
+      description: Delete ospf_nbr
+      operationId: delete-ospf_nbr
+      parameters:
+      - description: nbr_id
+        in: path
+        name: nbr_id
+        required: true
+        type: string
+      responses:
+        "204":
+          description: No Content
+        "400":
+          description: Invalid nbr_id
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+        "404":
+          description: Invalid route error
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+        "405":
+          description: Invalid method error
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+        "500":
+          description: Failde DB transaction
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+      summary: Delete ospf_nbr
+      tags:
+      - devices
+    get:
+      description: Get ospf_nbr info
+      operationId: get-ospf_nbr
+      parameters:
+      - description: nbr_id
+        in: path
+        name: nbr_id
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handlers.ospfNbr'
+        "400":
+          description: Invalid nbr_id
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+        "404":
+          description: OspfNbr not found
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+        "405":
+          description: Invalid method error
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+        "500":
+          description: Failde DB transaction
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+      summary: Get ospf_nbr
+      tags:
+      - devices
+    put:
+      description: Update ospf_nbr
+      operationId: update-ospf_nbr
+      parameters:
+      - description: nbr_id
+        in: path
+        name: nbr_id
+        required: true
+        type: string
+      - description: JSON object of ospfNbr.<br />Ignored fields:<ul><li>nbr_id</li><li>updated_on</li><li>created_on</li></ul>
+        in: body
+        name: Body
+        required: true
+        schema:
+          $ref: '#/definitions/handlers.ospfNbr'
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handlers.ospfNbr'
+        "400":
+          description: Invalid request
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+        "404":
+          description: Invalid route error
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+        "405":
+          description: Invalid method error
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+        "500":
+          description: Failde DB transaction
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+      summary: Update ospf_nbr
+      tags:
+      - devices
+  /devices/ospf_nbrs/{nbr_id}/device:
+    get:
+      description: Get ospf_nbr device info
+      operationId: get-ospf_nbr-device
+      parameters:
+      - description: nbr_id
+        in: path
+        name: nbr_id
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handlers.device'
+        "400":
+          description: Invalid nbr_id
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+        "404":
+          description: Invalid route error
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+        "405":
+          description: Invalid method error
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+        "500":
+          description: Failde DB transaction
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+      summary: Get ospf_nbr device
+      tags:
+      - devices
+  /devices/ospf_nbrs/count:
+    get:
+      description: Count number of ospf_nbrs
+      operationId: count-ospf_nbrs
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handlers.CountResponse'
+        "404":
+          description: Invalid route error
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+        "405":
+          description: Invalid method error
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+        "500":
+          description: Failde DB transaction
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+      summary: Count ospf_nbrs
+      tags:
+      - devices
   /devices/types:
     get:
       description: List device types info
